v0.0.1/modules/schema/pages/class/TransmissionProvider.adoc
= `TransmissionProvider`
:toclevels: 4


+++Provider of  the transmission capacity (interconnecting wires between Generation and Consumption) required  to fulfill and Energy Transaction's energy exchange. Posts information for transmission paths and AvailableTransmissionCapacities  on a reservation node.  Buys and sells its products and services on the same reservation node.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TransmissionProvider`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Organisation.adoc[`Organisation`]
*** *`TransmissionProvider`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
TransmissionProvider {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



LossProfile {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



TransmissionProduct {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



ElectronicAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TelephoneNumber {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



TelephoneNumber {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



StreetAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



StreetAddress {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ParentOrganization {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OrganisationRole {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



SwitchingPlanRequest {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}




TransmissionProvider -> LossProfile: For


TransmissionProvider -> TransmissionProduct: TransmissionProducts


TransmissionProvider -> ElectronicAddress: electronicAddress


TransmissionProvider -> TelephoneNumber: phone1


TransmissionProvider -> TelephoneNumber: phone2


TransmissionProvider -> StreetAddress: postalAddress


TransmissionProvider -> StreetAddress: streetAddress


TransmissionProvider -> ParentOrganization: ParentOrganisation


TransmissionProvider -> OrganisationRole: Roles


TransmissionProvider -> SwitchingPlanRequest: SwitchingPlanRequest


TransmissionProvider -> DiagramObject: DiagramObjects


TransmissionProvider -> InstanceSet: InstanceSet


TransmissionProvider -> Name: Names


TransmissionProvider -> ChangeSetMember: PropertiesCIMDataObject


TransmissionProvider -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<TransmissionProducts,`TransmissionProducts`>>
| 1..*
| xref::class/TransmissionProduct.adoc[`TransmissionProduct`]
| +++A TransmissionProvider offers a TransmissionProduct.+++

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<For,`For`>>
| 0..*
| xref::class/LossProfile.adoc[`LossProfile`]
| +++Part of the LossProfile for an EnergyTransaction may be a loss for a TransmissionProvider. If so, the TransmissionProvider must be one of the participating entities in the EnergyTransaction.+++

| <<ParentOrganisation,`ParentOrganisation`>>
| 0..1
| xref::class/ParentOrganization.adoc[`ParentOrganization`]
| +++Parent organisation of this organisation.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<electronicAddress,`electronicAddress`>>
| 0..1
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Electronic address.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<phone1,`phone1`>>
| 0..1
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]
| +++Phone number.+++

| <<phone2,`phone2`>>
| 0..1
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]
| +++Additional phone number.+++

| <<postalAddress,`postalAddress`>>
| 0..1
| xref::class/StreetAddress.adoc[`StreetAddress`]
| +++Postal address, potentially different than 'streetAddress' (e.g., another city).+++

| <<streetAddress,`streetAddress`>>
| 0..1
| xref::class/StreetAddress.adoc[`StreetAddress`]
| +++Street address.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<Roles,`Roles`>>
| 0..*
| xref::class/OrganisationRole.adoc[`OrganisationRole`]
| +++All roles of this organisation.+++

| <<SwitchingPlanRequest,`SwitchingPlanRequest`>>
| 0..*
| xref::class/SwitchingPlanRequest.adoc[`SwitchingPlanRequest`]
| +++The switching plan requested by the requesting organization+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#electronicAddress]
=== `electronicAddress`
+++Electronic address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.electronicAddress`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

//[discrete]
[#For]
=== `For`
+++Part of the LossProfile for an EnergyTransaction may be a loss for a TransmissionProvider. If so, the TransmissionProvider must be one of the participating entities in the EnergyTransaction.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransmissionProvider.For`
| Cardinality
| 0..*
| Type
| xref::class/LossProfile.adoc[`LossProfile`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ParentOrganisation]
=== `ParentOrganisation`
+++Parent organisation of this organisation.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.ParentOrganisation`
| Cardinality
| 0..1
| Type
| xref::class/ParentOrganization.adoc[`ParentOrganization`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

//[discrete]
[#phone1]
=== `phone1`
+++Phone number.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.phone1`
| Cardinality
| 0..1
| Type
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

//[discrete]
[#phone2]
=== `phone2`
+++Additional phone number.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.phone2`
| Cardinality
| 0..1
| Type
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

//[discrete]
[#postalAddress]
=== `postalAddress`
+++Postal address, potentially different than 'streetAddress' (e.g., another city).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.postalAddress`
| Cardinality
| 0..1
| Type
| xref::class/StreetAddress.adoc[`StreetAddress`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Roles]
=== `Roles`
+++All roles of this organisation.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.Roles`
| Cardinality
| 0..*
| Type
| xref::class/OrganisationRole.adoc[`OrganisationRole`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

//[discrete]
[#streetAddress]
=== `streetAddress`
+++Street address.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.streetAddress`
| Cardinality
| 0..1
| Type
| xref::class/StreetAddress.adoc[`StreetAddress`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

//[discrete]
[#SwitchingPlanRequest]
=== `SwitchingPlanRequest`
+++The switching plan requested by the requesting organization+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.SwitchingPlanRequest`
| Cardinality
| 0..*
| Type
| xref::class/SwitchingPlanRequest.adoc[`SwitchingPlanRequest`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TransmissionProducts]
=== `TransmissionProducts`
+++A TransmissionProvider offers a TransmissionProduct.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TransmissionProvider.TransmissionProducts`
| Cardinality
| 1..*
| Type
| xref::class/TransmissionProduct.adoc[`TransmissionProduct`]


|===


