v1.1.0/modules/schema/pages/class/TransmissionProvider.adoc
= `TransmissionProvider`
:toclevels: 4


+++Provider of  the transmission capacity (interconnecting wires between Generation and Consumption) required  to fulfill and Energy Transaction's energy exchange. Posts information for transmission paths and AvailableTransmissionCapacities  on a reservation node.  Buys and sells its products and services on the same reservation node.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:TransmissionProvider`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/Organisation.adoc[`Organisation`]
*** *`TransmissionProvider`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<For,`For`>>
//| [[slots_table.For]]<<For,`For`>>
| 0..* +
xref::class/LossProfile.adoc[`LossProfile`]
| +++Part of the LossProfile for an EnergyTransaction may be a loss for a TransmissionProvider. If so, the TransmissionProvider...+++
| _n/a_

| <<TransmissionProducts,`TransmissionProducts`>>
//| [[slots_table.TransmissionProducts]]<<TransmissionProducts,`TransmissionProducts`>>
| 1..* +
xref::class/TransmissionProduct.adoc[`TransmissionProduct`]
| +++A TransmissionProvider offers a TransmissionProduct.+++
| _n/a_

| <<ParentOrganisation,`ParentOrganisation`>>
//| [[slots_table.ParentOrganisation]]<<ParentOrganisation,`ParentOrganisation`>>
| 0..1 +
xref::class/ParentOrganization.adoc[`ParentOrganization`]
| +++Parent organisation of this organisation.+++
| xref::class/Organisation.adoc[`Organisation`]

| <<Roles,`Roles`>>
//| [[slots_table.Roles]]<<Roles,`Roles`>>
| 0..* +
xref::class/OrganisationRole.adoc[`OrganisationRole`]
| +++All roles of this organisation.+++
| xref::class/Organisation.adoc[`Organisation`]

| <<SwitchingPlanRequest,`SwitchingPlanRequest`>>
//| [[slots_table.SwitchingPlanRequest]]<<SwitchingPlanRequest,`SwitchingPlanRequest`>>
| 0..* +
xref::class/SwitchingPlanRequest.adoc[`SwitchingPlanRequest`]
| +++The switching plan requested by the requesting organization+++
| xref::class/Organisation.adoc[`Organisation`]

| <<electronicAddress,`electronicAddress`>>
//| [[slots_table.electronicAddress]]<<electronicAddress,`electronicAddress`>>
| 0..1 +
xref::class/ElectronicAddress.adoc[`ElectronicAddress`]
| +++Electronic address.+++
| xref::class/Organisation.adoc[`Organisation`]

| <<phone1,`phone1`>>
//| [[slots_table.phone1]]<<phone1,`phone1`>>
| 0..1 +
xref::class/TelephoneNumber.adoc[`TelephoneNumber`]
| +++Phone number.+++
| xref::class/Organisation.adoc[`Organisation`]

| <<phone2,`phone2`>>
//| [[slots_table.phone2]]<<phone2,`phone2`>>
| 0..1 +
xref::class/TelephoneNumber.adoc[`TelephoneNumber`]
| +++Additional phone number.+++
| xref::class/Organisation.adoc[`Organisation`]

| <<postalAddress,`postalAddress`>>
//| [[slots_table.postalAddress]]<<postalAddress,`postalAddress`>>
| 0..1 +
xref::class/StreetAddress.adoc[`StreetAddress`]
| +++Postal address, potentially different than 'streetAddress' (e.g., another city).+++
| xref::class/Organisation.adoc[`Organisation`]

| <<streetAddress,`streetAddress`>>
//| [[slots_table.streetAddress]]<<streetAddress,`streetAddress`>>
| 0..1 +
xref::class/StreetAddress.adoc[`StreetAddress`]
| +++Street address.+++
| xref::class/Organisation.adoc[`Organisation`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#electronicAddress]
=== `electronicAddress`
+++Electronic address.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.electronicAddress`
| Cardinality
| 0..1
| Type
| xref::class/ElectronicAddress.adoc[`ElectronicAddress`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

////
[.text-left]
--
<<slots_table.electronicAddress,&#10548;>>
--
////


//[discrete]
[#For]
=== `For`
+++Part of the LossProfile for an EnergyTransaction may be a loss for a TransmissionProvider. If so, the TransmissionProvider must be one of the participating entities in the EnergyTransaction.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransmissionProvider.For`
| Cardinality
| 0..*
| Type
| xref::class/LossProfile.adoc[`LossProfile`]


|===

////
[.text-left]
--
<<slots_table.For,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#ParentOrganisation]
=== `ParentOrganisation`
+++Parent organisation of this organisation.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.ParentOrganisation`
| Cardinality
| 0..1
| Type
| xref::class/ParentOrganization.adoc[`ParentOrganization`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

////
[.text-left]
--
<<slots_table.ParentOrganisation,&#10548;>>
--
////


//[discrete]
[#phone1]
=== `phone1`
+++Phone number.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.phone1`
| Cardinality
| 0..1
| Type
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

////
[.text-left]
--
<<slots_table.phone1,&#10548;>>
--
////


//[discrete]
[#phone2]
=== `phone2`
+++Additional phone number.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.phone2`
| Cardinality
| 0..1
| Type
| xref::class/TelephoneNumber.adoc[`TelephoneNumber`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

////
[.text-left]
--
<<slots_table.phone2,&#10548;>>
--
////


//[discrete]
[#postalAddress]
=== `postalAddress`
+++Postal address, potentially different than 'streetAddress' (e.g., another city).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.postalAddress`
| Cardinality
| 0..1
| Type
| xref::class/StreetAddress.adoc[`StreetAddress`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

////
[.text-left]
--
<<slots_table.postalAddress,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#Roles]
=== `Roles`
+++All roles of this organisation.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.Roles`
| Cardinality
| 0..*
| Type
| xref::class/OrganisationRole.adoc[`OrganisationRole`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

////
[.text-left]
--
<<slots_table.Roles,&#10548;>>
--
////


//[discrete]
[#streetAddress]
=== `streetAddress`
+++Street address.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.streetAddress`
| Cardinality
| 0..1
| Type
| xref::class/StreetAddress.adoc[`StreetAddress`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

////
[.text-left]
--
<<slots_table.streetAddress,&#10548;>>
--
////


//[discrete]
[#SwitchingPlanRequest]
=== `SwitchingPlanRequest`
+++The switching plan requested by the requesting organization+++


[cols="h,4",width=65%]
|===
| URI
| `cim:Organisation.SwitchingPlanRequest`
| Cardinality
| 0..*
| Type
| xref::class/SwitchingPlanRequest.adoc[`SwitchingPlanRequest`]

| Inherited from
| xref::class/Organisation.adoc[`Organisation`]


|===

////
[.text-left]
--
<<slots_table.SwitchingPlanRequest,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TransmissionProducts]
=== `TransmissionProducts`
+++A TransmissionProvider offers a TransmissionProduct.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TransmissionProvider.TransmissionProducts`
| Cardinality
| 1..*
| Type
| xref::class/TransmissionProduct.adoc[`TransmissionProduct`]


|===

////
[.text-left]
--
<<slots_table.TransmissionProducts,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/LossProfile.adoc[`LossProfile`] | xref::class/LossProfile.adoc#HasLoss_[`HasLoss_`]



| xref::class/TransmissionProduct.adoc[`TransmissionProduct`] | xref::class/TransmissionProduct.adoc#TransmissionProvider[`TransmissionProvider`]


|===

